--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.5"
