--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.522.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
